--- a/app/src/main/res/layout/view_history_item.xml
+++ b/app/src/main/res/layout/view_history_item.xml
@@ -2,19 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="4dp">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="5dp"
         android:src="@drawable/history" />
 
     <TextView
-        android:text="@string/test_text"
-        android:layout_marginLeft="18dp"
-        android:gravity="center|start"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="30dp"
+        android:text="@string/test_text"
+        android:gravity="center|start"
+        android:layout_marginLeft="6dp"/>
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/delete2" />
 
 </LinearLayout>
