--- a/app/src/main/res/layout/view_choice_up_search.xml
+++ b/app/src/main/res/layout/view_choice_up_search.xml
@@ -63,7 +63,7 @@
             android:background="@drawable/delete"
             android:layout_marginRight="15dp"
             android:layout_marginEnd="15dp"
-            android:id="@+id/delete"
+            android:id="@+id/img_delete"
             android:layout_width="20dp"
             android:layout_height="20dp" />
 
