--- a/app/src/main/res/layout/view_choice_up_search.xml
+++ b/app/src/main/res/layout/view_choice_up_search.xml
@@ -68,10 +68,10 @@
             android:layout_height="20dp" />
 
         <ImageView
+            android:id="@+id/img_search"
             android:background="@drawable/search"
             android:layout_marginRight="23dp"
             android:layout_marginEnd="23dp"
-            android:id="@+id/search"
             android:layout_width="20dp"
             android:layout_height="20dp" />
     </LinearLayout>
@@ -84,6 +84,7 @@
         android:visibility="invisible" />
 
     <ImageView
+
         android:background="@drawable/voice"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
