搜索框功能完善
1.增加历史布局；
2.增加动画优化；

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,29 +20,17 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <ImageView
+        android:foreground="@drawable/history"
         android:src="@drawable/history"
-        android:background="@drawable/history"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:contentDescription="@string/test_text" />
+
+
+
+
 
 
 
