--- a/app/src/main/res/layout/view_choice_up_search.xml
+++ b/app/src/main/res/layout/view_choice_up_search.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ListView
                 android:layout_marginTop="60dp"
